@@ -28,7 +28,7 @@
 	    focus-push-map
 	    focus-pop-map
 	    warp-pointer-if-necessary
-           focus-revert
+	    focus-revert
 	    focus-within-click-event)
 
     (open rep
@@ -143,13 +143,34 @@ EVENT-NAME)', where EVENT-NAME may be one of the following symbols:
 
 ;;; modes
 
+  #|
+  From sawfish-1.5.0, enter-notify events invoked by grab are
+  ignored in enter-exit and enter-only. This has a down side, too,
+  but first let us see what's the intention.
+
+  The problem that this solves is when you press Alt F2 in KDE, the
+  Run Command popup appears and gets focused (if focus-when-mapped is
+  non-nil), you start typing, the completion list pops up and takes
+  focus, then you type a bit further and the completion list
+  disappears.  Focus used to revert to the window the pointer was in,
+  which usually was not the Run Command popup.  transient-unmap-window
+  tries hard to get it right, then the grab-induced enter-notify
+  brought focus to the wrong window anyway.
+
+  The problem that this causes is when you open the KDE main menu by
+  clicking the K icon in the panel, move the mouse into some
+  application window and click to dismiss the open menu, focus reverts
+  to the panel. You have to move the pointer out of the application
+  window and back in to get it focused.
+  |#
   (define-focus-mode 'enter-exit
     (lambda (w action . args)
       (case action
 	((pointer-in)
 	 (when (and (window-really-wants-input-p w)
-                    ;; ignore grab/ungrab enter events
-                    (eq (car args) 'normal))
+		    ;; ignore grab/ungrab enter events
+		    ;; See the above long comment
+		    (eq (car args) 'normal))
 	   (set-input-focus w)))
 	((pointer-out)
 	 ;; ignore grab/ungrab leave events
@@ -161,32 +182,33 @@ EVENT-NAME)', where EVENT-NAME may be one of the following symbols:
 	((warp-if-necessary)
 	 (unless (eq (query-pointer-window) w)
 	   (warp-cursor-to-window w)))
-        ((focus-revert)
-         (setq w (query-pointer-window))
-         (when (or (null w)
-                   (window-really-wants-input-p w))
-           (set-input-focus w))))))
+	((focus-revert)
+	 (setq w (query-pointer-window))
+	 (when (or (null w)
+		   (window-really-wants-input-p w))
+	   (set-input-focus w))))))
 
   (define-focus-mode 'enter-only
     (lambda (w action . args)
       (case action
 	((pointer-in)
 	 (when (and (window-really-wants-input-p w)
-                    ;; ignore grab/ungrab enter events
-                    (eq (car args) 'normal))
+		    ;; ignore grab/ungrab enter events
+		    ;; See the comment above enter-exit
+		    (eq (car args) 'normal))
 	   (set-input-focus w)))
 	((warp-if-necessary)
 	 (let ((current (query-pointer-window)))
 	   (unless (or (eq current w) (desktop-window-p current))
 	     (warp-cursor-to-window w))))
-        ((focus-revert)
-         (setq w (query-pointer-window))
-         (when (or (null w)
-                   (desktop-window-p w))
-           (setq w (window-order-most-recent)))
-         (when (or (null w)
-                   (window-really-wants-input-p w))
-           (set-input-focus w))))))
+	((focus-revert)
+	 (setq w (query-pointer-window))
+	 (when (or (null w)
+		   (desktop-window-p w))
+	   (setq w (window-order-most-recent)))
+	 (when (or (null w)
+		   (window-really-wants-input-p w))
+	   (set-input-focus w))))))
 
   (define (focus-click)
     (let ((w (current-event-window))
@@ -239,19 +261,19 @@ EVENT-NAME)', where EVENT-NAME may be one of the following symbols:
 	 (unless (or (not (window-really-wants-input-p w))
 		     (eq w (input-focus)))
 	   (focus-push-map w click-to-focus-map)))
-        ((focus-revert)
-         (setq w (window-order-most-recent))
-         (when (or (null w)
-                   (window-really-wants-input-p w))
-           (set-input-focus w))))))
+	((focus-revert)
+	 (setq w (window-order-most-recent))
+	 (when (or (null w)
+		   (window-really-wants-input-p w))
+	   (set-input-focus w))))))
 
   (define-focus-mode 'enter-click
     (lambda (w action . args)
       (case action
-        ((pointer-in warp-if-necessary focus-revert)
-         (apply (focus-mode-ref 'enter-only) w action args))
-        ((focus-in focus-out add-window before-mode-change after-mode-change)
-         (apply (focus-mode-ref 'click) w action args)))))
+	((pointer-in warp-if-necessary focus-revert)
+	 (apply (focus-mode-ref 'enter-only) w action args))
+	((focus-in focus-out add-window before-mode-change after-mode-change)
+	 (apply (focus-mode-ref 'click) w action args)))))
 
 ;;; hooks
 
