@@ -1,3 +1,10 @@
+2009-09-12  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/focus.jl: doc for focus-revert
+	                            indention improvements
+				    -- [Teika Kazura]
+	
+	* man/news.texi: major rewrite of 1.5.0 section [Teika Kazura]
+
 2009-09-11  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in
 	* Makedefs.in
